--- a/UTS_Pemrograman Web 1/web_pariwisata_UTS/index.html
+++ b/UTS_Pemrograman Web 1/web_pariwisata_UTS/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <div class="header-content">
-        <h1>Portofolio Website Pariwisata</h1>
+        <h1>Website Pariwisata</h1>
       </div>
     </div>
   </header>
